--- a/content/summary.html
+++ b/content/summary.html
@@ -51,62 +51,79 @@
         <!-- Survey Recap Section -->
         <section class="content-section">
             <h2>Survey Recap</h2>
-            <p>
-                Banner appears to be unpopular among the majority of users surveyed (n=8), with 75% of initial impressions scoring a 1 or a 2.
-            </p>
+            <ul class="styled-list">
+                <li>75% of users gave a rating of 1 or 2 for initial impressions of Banner (n=8).</li>
+                <li>The advanced search feature received the most criticism due to overwhelming options and unclear filters.</li>
+                <li>Issues like schedule preview pane and obstructed views were frequently mentioned in open-ended responses.</li>
+                <li>Key user complaints included redundant tabs, navigation difficulties, and poor layout design.</li>
+            </ul>
 
-            <!-- Image Card -->
             <figure class="image-card">
-                <img src="../images/inital_impression_reviews.png" alt="A list of the open-ended responses to initial impressions of Banner." onclick="enlargeImage(this)">
-                <figcaption>Open-ended responses given by users.</figcaption>
+                <img src="../images/inital_impression_reviews.png" alt="Open-ended responses about initial impressions of Banner" onclick="enlargeImage(this)">
+                <figcaption>User feedback on Banner's initial impressions.</figcaption>
             </figure>
 
-            <p>
-                Regarding specific categories, responses were split, with most showing a 50/50 positive-to-negative ratio. However, the advanced search feature stood out for receiving a significantly higher number of negative ratings.
-            </p>
+            <h3>Advanced Search Issues</h3>
+            <p>Users noted the following problems with advanced search:</p>
+            <ul class="styled-list">
+                <li>Excessive filters that confuse users and increase selection time.</li>
+                <li>Unclear filter options like "Schedule Type" and "Open Sections."</li>
+                <li>Useful filters like "Course Number Range" are hidden behind a long list of other filters.</li>
+            </ul>
 
-            <!-- Image Card -->
             <figure class="image-card">
-                <img src="../images/advanced_search_results.png" alt="A pie chart showing the breakdown of ratings for Advanced Search." onclick="enlargeImage(this)">
-                <figcaption>Ratings for advanced search, showing half the users ranked it a 1.</figcaption>
+                <img src="../images/advanced_search_results.png" alt="Pie chart showing ratings for Advanced Search" onclick="enlargeImage(this)">
+                <figcaption>50% of users rated the advanced search feature as 1 out of 5.</figcaption>
             </figure>
 
-            <p>
-                The advanced search feature likely received poor reviews due to its overwhelming number of options. Filters such as "Open sections" and "Schedule Type" are unclear, while more useful options like "Course number range" are buried among less relevant ones.
-            </p>
-
-            <!-- Image Card -->
             <figure class="image-card">
-                <img src="../images/advanced_search.gif" alt="An animation showing how excessive the advanced search options are as they keep scrolling." onclick="enlargeImage(this)">
-                <figcaption>Animation showcasing the overwhelming nature of advanced search.</figcaption>
+                <img src="../images/advanced_search.gif" alt="Scrolling view of advanced search filters" onclick="enlargeImage(this)">
+                <figcaption>Scrolling animation showcasing the overwhelming number of advanced search filters.</figcaption>
+            </figure>
+        </section>
+
+        <!-- UI Issues -->
+        <section class="content-section">
+            <h2>UI Challenges</h2>
+            <p>Users highlighted several issues with Banner's interface:</p>
+            <ul class="styled-list">
+                <li>The schedule preview pane occupies too much space (~50% of the screen) and obstructs other elements.</li>
+                <li>Users must frequently drag the preview pane up and down while registering for classes.</li>
+                <li>Important details like prerequisites, timing, and location are spread across multiple tabs, increasing navigation time.</li>
+            </ul>
+
+            <figure class="image-card">
+                <img src="../images/half_of_space.png" alt="View of schedule preview obstructing the screen" onclick="enlargeImage(this)">
+                <figcaption>The schedule preview pane blocks viewable content, limiting the number of visible courses.</figcaption>
+            </figure>
+
+            <figure class="image-card">
+                <img src="../images/categories_impression_reviews.png" alt="User reviews of category impressions" onclick="enlargeImage(this)">
+                <figcaption>User reviews of the different categories of Banner.</figcaption>
             </figure>
         </section>
 
         <!-- Study Recap Section -->
         <section class="content-section">
             <h2>Study Recap</h2>
-
+            
             <h3>Duration to Schedule Courses</h3>
-            <ul>
-                <li>
-                    <strong>Participant 1:</strong> Took 5 minutes and 42 seconds in Banner compared to 1 minute and 13 seconds in Clarify. They noted difficulty in "trying to find humanities/social science classes with open sections."
-                </li>
-                <li>
-                    <strong>Participant 2:</strong> Attempted the task but gave up due to repeated system errors where Banner failed to display available classes, even when they existed.
-                </li>
+            <ul class="styled-list">
+                <li><strong>Participant 1:</strong> Took 5 min 42 sec in Banner vs 1 min 13 sec in Clarify. Main delay was searching for open humanities courses.</li>
+                <li><strong>Participant 2:</strong> Abandoned task after encountering repeated system errors, where Banner failed to display available classes.</li>
             </ul>
 
-            <h3>Different Registration Systems</h3>
+            <h3>Comparison of Registration Systems</h3>
             <p><strong>Participant 1:</strong></p>
-            <ul>
-                <li><strong>Northwestern vs IIT:</strong> Northwestern's system is more condensed and simplified, but going back a tab causes issues.</li>
-                <li><strong>UChicago vs IIT:</strong> Tags like closed, open, in-person, and cross-listed are better than Banner's design.</li>
+            <ul class="styled-list">
+                <li>Northwestern: "Simpler design, but navigating back to previous results caused issues."</li>
+                <li>UChicago: "Clean design with useful tags (closed, open, in-person) — better than Banner's approach."</li>
             </ul>
 
             <p><strong>Participant 2:</strong></p>
-            <ul>
-                <li><strong>Northwestern vs IIT:</strong> Northwestern's search tool was difficult to use, and navigating back to results reset the search page.</li>
-                <li><strong>UChicago vs IIT:</strong> The search tool worked without issues.</li>
+            <ul class="styled-list">
+                <li>Northwestern: "Hard to navigate. Going back to previous results often caused errors."</li>
+                <li>UChicago: "The search tool worked without issues."</li>
             </ul>
         </section>
     </main>
